--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.19.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
